change gofundher to cashfundher
All match cases are implemented

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 
     <main>
       <div class="jumbotron">
-        <h2>GoFundHer</h2>
+        <h2>CashFundHer</h2>
         <br />
       </div>
     </main>
