--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- views/partials/footer.ejs -->
 
 <p class="text-center text-muted">
-  © Copyright <%= new Date().getFullYear() %> GoFundHer
+  © Copyright <%= new Date().getFullYear() %> CashFundHer
 </p>
