--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 
 <meta charset="UTF-8" />
-<title>GoFundHer</title>
+<title>CashFundHer</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link
@@ -13,7 +13,7 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
 <meta property="fb:app_id" content="306939030545293" />
-<meta property="og:site_name" content="GOFUNDHER" />
+<meta property="og:site_name" content="CashFundHer" />
 <% if (title) { %>
 <meta property="og:title" content="<%= title %>" />
 <%} %> <% if (description) { %>
