--- a/views/pages/partials/header.ejs
+++ b/views/pages/partials/header.ejs
@@ -5,7 +5,7 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">
 				<span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-				GoFundHer Facebook Share page
+				CashFundHer Facebook Share page
 			</a>
 
 			<!-- <ul class="nav navbar-nav">
